fix: edit defaultPosition & defaultOpen & remove open shorkey

--- a/src/index.less
+++ b/src/index.less
@@ -30,7 +30,7 @@
     }
   }
 
-  &.open {
+  &.antdv-table-vbrowse-opened {
     .antdv-table-vbrowse-open-target {
       max-width: 999px;
     }
